Implement SQA criterion with repo object.
