# openapi_server/models/__init__.py
@@ -1,4 +1,6 @@
 # coding: utf-8
 
 # import models into model package
+from openapi_server.models.criterion_with_repo import CriterionWithRepo
 from openapi_server.models.pipeline import Pipeline
+from openapi_server.models.repository import Repository
